--- a/.github/workflows/flyway.yaml
+++ b/.github/workflows/flyway.yaml
@@ -42,7 +42,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Package
-        run: mvn package -DskipTests
+        run: mvn clean package -DskipTests
 
       # Build and Push Docker image on Repository Github
       - name: Set up Docker Buildx
