--- a/.github/workflows/flyway.yaml
+++ b/.github/workflows/flyway.yaml
@@ -48,6 +48,8 @@ jobs:
       - name: Set up Docker Buildx
         if: ${{ success() }}
         uses: docker/setup-buildx-action@v1
+        with:
+          version: v0.7.0
 
       - name: Log in to the Container registry
         if: ${{ success() }}
