--- a/.github/workflows/flyway.yaml
+++ b/.github/workflows/flyway.yaml
@@ -55,7 +55,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.DC_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
